[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/popup/Introduction/gestureIntro.gd" type="Script" id=1]
[ext_resource path="res://art/Introduction/Guesture_1.png" type="Texture" id=2]
[ext_resource path="res://art/Introduction/Guesture_3.png" type="Texture" id=3]
[ext_resource path="res://art/Introduction/refresh_arrow.png" type="Texture" id=4]
[ext_resource path="res://font/CarterOne.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://art/Introduction/Guesture_2.png" type="Texture" id=6]
[ext_resource path="res://art/Introduction/Skip_button.png" type="Texture" id=7]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 0.01
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
angular_velocity = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
color_ramp = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 21
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=5]
length = 4.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.57, 0.91, 1.28, 1.47, 1.6, 1.75, 2.17, 2.51, 2.88, 3.07, 3.21, 3.36, 3.73 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 260, 337.104 ), Vector2( 260, 337.104 ), Vector2( 90, 337.104 ), Vector2( 90, 337.104 ), Vector2( 260, 337.104 ), Vector2( 260, 337.104 ), Vector2( 260, 337.104 ), Vector2( 260, 337.104 ), Vector2( 90, 337.104 ), Vector2( 90, 337.104 ), Vector2( 260, 337.104 ), Vector2( 260, 337.104 ), Vector2( 260, 337.104 ), Vector2( 260, 337.104 ), Vector2( 160, 337.104 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.56, 0.67, 0.79, 0.9, 1.28, 1.46, 1.6, 1.75, 2.16, 2.27, 2.39, 2.5, 2.88, 3.06, 3.21, 3.36, 3.62, 3.73 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("lblMsg:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3.74, 3.94 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TextureRect:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("lblMsg:text")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.01 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "SWIPE LEFT/RIGHT TO HOME" ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Img_round:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.02 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TextureRect:texture")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.02, 0.09, 0.17, 0.78, 0.85, 0.93, 1.63, 1.72, 1.8, 2.39, 2.46, 2.54, 3.21, 3.28, 3.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 3 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("lblMsg:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = false
tracks/7/keys = {
"times": PoolRealArray( 0.02 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 32, 469 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("TextureRect:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "swipe_down_anim"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 1.4, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 1, 1.3, 1.5, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 180, 337.104 ), Vector2( 180, 337.104 ), Vector2( 180, 500 ), Vector2( 180, 337.104 ), Vector2( 180, 337.104 ), Vector2( 180, 500 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8, 1, 1.3, 1.5, 2.4, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("lblMsg:text")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "SWIPE DOWN TO QUICK DROP", "" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("lblMsg:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0, 2.8, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 260 ), Vector2( 32, 260 ), Vector2( 32, 469 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TextureRect:rect_rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TextureRect:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
length = 4.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 160, 273 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TextureRect:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 1, 1.15, 1.3, 2.1, 2.2, 2.3, 3.1, 3.2, 3.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 3 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("lblMsg:text")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "TAP TO ROTATE" ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Img_round:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/keys = {
"times": PoolRealArray( 0.02 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 160.934, 298.306 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Img_round:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.02, 3.33 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Img_round:rect_rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.01, 3.38 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 260.0 ]
}
tracks/8/type = "method"
tracks/8/path = NodePath(".")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.36, 1.31, 2.32, 3.32 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "call_tap"
}, {
"args": [  ],
"method": "call_tap"
}, {
"args": [  ],
"method": "call_tap"
}, {
"args": [  ],
"method": "call_tap"
} ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("TapHand/tap_explotion:emitting")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = false
tracks/9/keys = {
"times": PoolRealArray( 0.12, 0.31, 3.49, 3.71, 4.54, 4.71, 5.54, 5.71 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("lblMsg:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( -0.01 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("TextureRect:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("TapHand:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 3.37 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("TapHand:texture")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 1, 1.15, 1.3, 2.1, 2.25, 2.4, 3.1, 3.2, 3.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 3 ) ]
}

[sub_resource type="Gradient" id=8]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0.0130565, 0.80985 ), 0.0, 0.0, 0, 0, Vector2( 0.991603, 0.25545 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
flag_disable_z = true
spread = 10.0
gravity = Vector3( 100, 0, 0 )
initial_velocity = 100.0
angular_velocity = 0.173529
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_curve = SubResource( 11 )
color_ramp = SubResource( 9 )

[node name="gestureIntro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.113725, 0.113725, 0.113725, 0.482353 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 72.0
margin_top = 3.604
margin_right = 119.0
margin_bottom = 63.606
rect_pivot_offset = Vector2( 23.8927, 35.1209 )
texture = ExtResource( 2 )

[node name="TapHand" type="TextureRect" parent="."]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.0
margin_top = -60.5
margin_right = 19.0002
margin_bottom = -0.498047
rect_rotation = 180.0
rect_pivot_offset = Vector2( 23.8927, 35.1209 )
texture = ExtResource( 3 )

[node name="tap_explotion" type="Particles2D" parent="TapHand"]
position = Vector2( 12.5604, 11.3258 )
rotation = 3.14159
emitting = false
amount = 500
one_shot = true
speed_scale = 3.0
explosiveness = 1.0
process_material = SubResource( 3 )

[node name="Img_round" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.301961 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.066
margin_top = -35.194
margin_right = 42.934
margin_bottom = 34.806
rect_rotation = 114.184
rect_pivot_offset = Vector2( 35.4066, 34.3666 )
texture = ExtResource( 4 )

[node name="lblMsg" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -156.0
margin_top = -198.0
margin_right = 156.0
margin_bottom = -162.0
custom_fonts/font = SubResource( 4 )
text = "SWIPE LEFT/RIGHT TO HOME"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "left_right_anim"
anims/left_right_anim = SubResource( 5 )
anims/swipe_down_anim = SubResource( 6 )
anims/tap_anim = SubResource( 7 )

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
position = Vector2( 176.598, 123.552 )
emitting = false
amount = 200
one_shot = true
speed_scale = 2.0
fract_delta = false
process_material = SubResource( 12 )

[node name="btnSkip" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -74.0
margin_top = -76.0
margin_right = 82.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 75.3198, -1.02466 )
icon = ExtResource( 7 )
flat = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="btnSkip" to="." method="_on_btnSkip_pressed"]
